# Visual-Studio-IDE-Setup-Guide--CMake--wxWidgets--OpenGL--and-vcpkg

./: README.md
CMake_wxWidgets_openGL/: CMakeLists.txt  CMake_wxWidgets_openGL.cpp  CMake_wxWidgets_openGL.h  vcpkg.json
